--- a/multiple_markers/index.html
+++ b/multiple_markers/index.html
@@ -12,7 +12,7 @@
     <a-scene embedded arjs>
 
       <a-marker preset="hiro">
-          <a-entity gltf-model="models/bomb-2.glb.glb" radius=".5" material="opacity: 0.7;" color="red" position="0 1 0">
+          <a-entity gltf-model="models/bomb-2.glb" radius=".5" material="opacity: 0.7;" color="red" position="0 1 0">
             </a-entity>
       </a-marker>
         
