--- a/multiple_markers/test.html
+++ b/multiple_markers/test.html
@@ -12,7 +12,8 @@
     <a-scene embedded arjs>
 
       <a-marker preset="hiro">
-          <a-sphere radius=".5" material="opacity: 0.7;" color="red" position="0 1 0"></a-sphere>
+         <a-entity  gltf-model="models/bomb-2.glb" radius=".5" material="opacity: 0.7;" color="red" position="0 1 0">
+	      </a-entity>
       </a-marker>
         
      <a-marker preset="kanji">  
@@ -20,7 +21,7 @@
 	    </a-entity>
 	      </a-marker>  
 	      
-	      <a-marker id="zb" type="pattern" url="markers/patt.zb">
+	<a-marker id="zb" type="pattern" url="markers/patt.zb">
 	        <a-entity position="0 0 0" gltf-model="models/gun.glb" rotation="0 90 0" scale="1 1 1">
 	        </a-entity>
 	      </a-marker>  
